latex2mmlc/tests/snapshots/wiki_test__wiki079.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Vvdash \\nvdash \\nVdash \\nvDash \\nVDash"
---
<math>
    <mo>⊪</mo>
    <mo>⊬</mo>
    <mo>⊮</mo>
    <mo>⊭</mo>
    <mo>⊯</mo>
</math>
