latex2mmlc/tests/snapshots/wiki_test__wiki080.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\ulcorner \\urcorner \\llcorner \\lrcorner"
---
<math>
    <mi>⌜</mi>
    <mi>⌝</mi>
    <mi>⌞</mi>
    <mi>⌟</mi>
</math>
