latex2mmlc/tests/snapshots/wiki_test__wiki081.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Rrightarrow, \\Lleftarrow"
---
<math>
    <mo>⇛</mo>
    <mo>,</mo>
    <mo>⇚</mo>
</math>
