latex2mmlc/tests/snapshots/wiki_test__wiki082.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Rightarrow, \\nRightarrow, \\Longrightarrow, \\implies"
---
<math>
    <mo>⇒</mo>
    <mo>,</mo>
    <mo>⇏</mo>
    <mo>,</mo>
    <mo>⟹</mo>
    <mo>,</mo>
    <mo>⟹</mo>
</math>
