latex2mmlc/tests/snapshots/wiki_test__wiki084.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Leftrightarrow, \\nLeftrightarrow, \\Longleftrightarrow, \\iff"
---
<math>
    <mo>⇔</mo>
    <mo>,</mo>
    <mo>⇎</mo>
    <mo>,</mo>
    <mo>⟺</mo>
    <mo>,</mo>
    <mo>⟺</mo>
</math>
