latex2mmlc/tests/snapshots/wiki_test__wiki085.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Uparrow, \\Downarrow, \\Updownarrow"
---
<math>
    <mo>⇑</mo>
    <mo>,</mo>
    <mo>⇓</mo>
    <mo>,</mo>
    <mo>⇕</mo>
</math>
