latex2mmlc/tests/snapshots/wiki_test__wiki086.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\rightarrow \\to, \\nrightarrow, \\longrightarrow"
---
<math>
    <mo>→</mo>
    <mo>→</mo>
    <mo>,</mo>
    <mo>↛</mo>
    <mo>,</mo>
    <mo>⟶</mo>
</math>
