latex2mmlc/tests/snapshots/wiki_test__wiki087.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\leftarrow \\gets, \\nleftarrow, \\longleftarrow"
---
<math>
    <mo>←</mo>
    <mo>←</mo>
    <mo>,</mo>
    <mo>↚</mo>
    <mo>,</mo>
    <mo>⟵</mo>
</math>
