latex2mmlc/tests/snapshots/wiki_test__wiki088.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\leftrightarrow, \\nleftrightarrow, \\longleftrightarrow"
---
<math>
    <mo>↔</mo>
    <mo>,</mo>
    <mo>↮</mo>
    <mo>,</mo>
    <mo>⟷</mo>
</math>
