latex2mmlc/tests/snapshots/wiki_test__wiki090.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\nearrow, \\swarrow, \\nwarrow, \\searrow"
---
<math>
    <mo>↗</mo>
    <mo>,</mo>
    <mo>↙</mo>
    <mo>,</mo>
    <mo>↖</mo>
    <mo>,</mo>
    <mo>↘</mo>
</math>
